Bug 57236 - CRASH when FILESAVE .doc as .html
Summary: CRASH when FILESAVE .doc as .html
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.0.0
Keywords: haveBacktrace
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-11-17 21:20 UTC by Lior Kaplan
Modified: 2012-11-25 17:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test document (13.00 KB, application/msword)
2012-11-17 21:21 UTC, Lior Kaplan
Details
backtrace (7.62 KB, text/x-log)
2012-11-17 21:22 UTC, Lior Kaplan
Details
ldd output (10.55 KB, text/x-log)
2012-11-17 21:22 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lior Kaplan 2012-11-17 21:20:15 UTC
(Build from 4.0/master commit a2d6af on debian testing 64bit)

When trying the save the attached doc file to HTML writer crashes. Trying to save a new file succeeds. Can't reproduce on 3.6.3 with the same file.

Also attached is a backtrace and ldd output.
Comment 1 Lior Kaplan 2012-11-17 21:21:08 UTC
Created attachment 70200 [details]
test document
Comment 2 Lior Kaplan 2012-11-17 21:22:00 UTC
Created attachment 70201 [details]
backtrace
Comment 3 Lior Kaplan 2012-11-17 21:22:23 UTC
Created attachment 70202 [details]
ldd output
Comment 4 Rainer Bielefeld Retired 2012-11-18 14:58:24 UTC
[Reproducible] with  Lior's sample document and parallel installation of Master "LOdev  4.0.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: a2b3ee)]"  {tinderbox: @6, pull time 2012-11-13 06:07:28} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch

Seems to be a a very general problem. Steps how to reproduce:
1. creat a new WRITER document from LibO Start center
2. type "xyz" into document
3. save it as "xyz.doc" (MSO97)
4. Close document (without exiting LibO)
5. Reopen "xyz.doc" from menu 'File -> Recent Documents'
6. 'File -> Save as - xyz.html' <save>
   CRASH

Also crashes if "xyz.doc" is in WORD 6 format or is a xyz.docx (OOXML)

It really is a problem during the save process, no crash saving the same "xyz.doc" from LibO 3.6.4.1 as .html
Comment 5 Rainer Bielefeld Retired 2012-11-18 15:05:31 UTC
Already [Reproducible] with Server-installation of Master "3.7.0.alpha0+  – ENGLISH UI [Build ID: f2e622]" {tinderbox: Win-x86@16, pull time 2012-10-06 09:31:39} on German WIN7 Home Premium (64bit) UserInstallation=$SYSUSERCONFIG/LOdev/3

Still worked fine with server-installation of Master "3.7.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: b255de8]" (tinderbox: Win-x86@6-fast, pull time 2012-06-05 23:16:58)

Unfortunately I do not have many Master Versions installed between those 2, but if necessary I can reactivate some to narrow down the commit what causes the crash
Comment 6 Julien Nabet 2012-11-20 19:44:04 UTC
On pc Debian x86-64 with master sources updated today (commit fd91019804398c0643951eb291a45d3931968ae3).
Comment 7 Julien Nabet 2012-11-23 11:35:31 UTC
Sorry, by rereading my last comment, I must have saved my comment too early. If I remember well, it was ok for me with the commit I quoted.
I'll try to find some time to retest this.
Comment 8 Caolán McNamara 2012-11-23 12:17:46 UTC
possible a regression from 1b0f7ee1e04d7b0fe81f7458ae2116615e0f6889
I note that in that commit there's a bit of bustage because the SfxItemSet ctor in use takes a sequence of start/end pairs of property id ranges
Comment 9 Not Assigned 2012-11-23 13:03:27 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13fe193ae9f03c4bcc2fa22993470b8c37cc3c6d

Resolves: fdo#57236 crash on export to html



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2012-11-23 13:06:25 UTC
I reckon that'll fix it. 

caolanm->Istvan: can you double check I didn't break the changes for fdo#49101 and fdo#49098
Comment 11 István Túri 2012-11-23 14:45:27 UTC
Hello, I made those patches while I was on trainee course in July & August. I no longer work on LibreOffice, and I reinstalled my OS since then, so please find someone else.As I recall, I made the parser to create custom attributes for the CJK and CTL font packs as well (since originally it just copied the Latin attributes for those), so I presume it will have no further effects. Cheers
 bugzilla-daemon@freedesktop.org írta:
> 
Caolán McNamara  changed bug 57236
WhatRemovedAdded
StatusNEWRESOLVED
Resolution---FIXED
 
Comment # 10 on bug 57236 from  Caolán McNamara I reckon that&#39;ll fix it. caolanm->Istvan: can you double check I didn&#39;t break the changes for fdo#49101and fdo#49098
 
You are receiving this mail because:You are on the CC list for the bug.
Comment 12 Lior Kaplan 2012-11-25 17:09:33 UTC
Fix verified on a private build (Debian 64bit). Thanks for the quick fix (: