Resolves: fdo#57236 crash on export to html

SfxItemSet takes a sequence of (start, end) property ranges
not a sequence of isolated properties

reading 1b0f7ee1e04d7b0fe81f7458ae2116615e0f6889 it appears that the properties
the new code wanted to query are included in the original ranges already

Change-Id: Ifecdf23270d7f3d875d1c0cd942bab659bbabf29